upload png to 3d possible

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "**/*.tsx",
+    "**/*.ts"
   ]
 }
