--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "shop-build": "cross-env NODE_ENV=production webpack"
   },
   "eslintConfig": {
     "extends": [
@@ -34,14 +35,28 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.143.0",
     "autoprefixer": "^10.4.8",
+    "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.7.2",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.7",
-    "typescript": "4.7.4"
+    "terser-webpack-plugin": "^5.3.3",
+    "typescript": "4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   }
 }
