--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.2",
     "three": "0.143.0",
+    "tui-image-editor": "^3.15.3",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -47,6 +48,7 @@
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.7.2",
