--- a/backend/aws/package.json
+++ b/backend/aws/package.json
@@ -1,14 +1,24 @@
 {
   "name": "tshirt-editor-aws",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API for tshirt-editor in AWS",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "(cd lambdas && npm install);",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "cdk": "cdk"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.7.6",
+    "aws-cdk": "^2.37.1",
+    "aws-sdk": "^2.1196.0",
+    "esbuild": "^0.15.4",
+    "typescript": "^4.7.4"
+  },
   "dependencies": {
-    "aws-cdk": "^2.37.1"
+    "aws-cdk-lib": "^2.37.1",
+    "constructs": "^10.1.78"
   }
 }
