--- a/backend/aws/tsconfig.json
+++ b/backend/aws/tsconfig.json
@@ -7,6 +7,7 @@
       "es2017.object",
       "es2017.string"
     ],
+    "types": [ "node" ],
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -19,9 +20,10 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "esModuleInterop": true
   },
   "include": [
-    "*.ts"
-  ]
+    "*.ts", "**/*.ts"
+  ],
 }
