--- a/backend/aws/tsconfig.json
+++ b/backend/aws/tsconfig.json
@@ -21,7 +21,8 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": [
     "*.ts", "**/*.ts"
