--- a/backend/aws/package.json
+++ b/backend/aws/package.json
@@ -7,14 +7,14 @@
     "build": "tsc",
     "watch": "tsc -w",
     "cdk": "cdk",
-    "deploy": "tsc & cdk deploy --outputs-file ./cdk-outputs.json --profile juju"
+    "deploy": "tsc & cdk deploy --outputs-file ./cdk-outputs.json --profile juju && cp -f cdk-outputs.json ../../editor/src/cdk-outputs.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.7.6",
     "@types/uuid": "^8.3.4",
-    "aws-cdk": "^2.37.1",
+    "aws-cdk": "^2.38.1",
     "aws-sdk": "^2.1196.0",
     "esbuild": "^0.15.4",
     "typescript": "^4.7.4"
