--- a/backend/aws/tsconfig.json
+++ b/backend/aws/tsconfig.json
@@ -22,9 +22,10 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "include": [
     "*.ts", "**/*.ts"
-  ],
+  ]
 }
