--- a/editor/package.json
+++ b/editor/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.150.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.2",
     "three": "0.143.0",
     "tui-image-editor": "^3.15.3",
+    "uuid": "^8.3.2",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -44,6 +46,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.143.0",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
