--- a/editor/package.json
+++ b/editor/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-s3": "^3.150.0",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.2",
