--- a/editor/.babelrc
+++ b/editor/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["@babel/env", "@babel/react", "@babel/typescript"]
+  "presets": [
+    "@babel/preset-typescript",
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
 }
